fix the vertical align by adding more entries

--- a/themes/ayhoom/assets/css/index.css
+++ b/themes/ayhoom/assets/css/index.css
@@ -1,6 +1,7 @@
 .indexTable {
 	display:grid;
 	grid-template-rows: 50% 50%;
+	justify-content: center;
 }
 
 @media screen and (min-width: 40em) {
